assets/css/style.css
/* ... */
.post-slider .prev {
  position: absolute;
  top: 50%;
  left: 30px;
  font-size: 2em;
  color: #006668;
  cursor: pointer;
}

.post-slider .next,
.post-slider .prev {
  top: 50%;
  transform: translateY(-50%); /* Perfectly center them vertically */
  z-index: 10;
}

.post-slider .post-wrapper {
  width: 84%;
  height: 350px;
  margin: 0px auto;
  overflow: hidden;
  padding: 10px 0px 10px 0px;
}

.post-slider .slider-title {
  text-align: center;
  margin: 30px auto;
}

.post-slider .post-wrapper .post {
  background: #05f7ff;
  display: flex;
  flex-direction: column;
  width: 300px;
  height: auto;
  min-height: 350px;
  margin: 0px 10px;
  background: white;
  border-radius: 5px;
  box-shadow: 1rem 1rem 1rem -1rem #a0a0a044;
}

.post-slider .post-wrapper .post-info {
  height: 130px;
  padding: 0px 5px;
}

.post-slider .post-wrapper .post .slider-image {
  width: 100%;
  height: 200px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.post-slider .post-wrapper .post .post-info {
  height: auto; /* Allow text to breathe */
  padding: 10px;
}

/* // Post Slider */

/* CONTENT */

.content {
  width: 90%;
  margin: 30px auto 30px;
}

.content .main-content {
  width: 70%;
  float: left;
}

.content .main-content.single {
  background: white;
  padding: 20px 50px;
  font-size: 1.3rem;
  border-radius: 5px;
  border: 2px solid goldenrd;
}

.content .main-content.single .post-title {
  text-align: center;
  margin-bottom: 40px;
}

.content .main-content .post {
  width: 95%;
  height: 270px;
  margin: 20px auto;
  border-radius: 5px;
  background: white;
  position: relative;
}

/* Popular Posts */

.content .popular .post {
  margin-top: 10px;
  padding-top: 10px;
}

.content .popular .post img {
  height: 60px;
  width: 60px;
  float: left;
  margin-right: 10px;
}

/* //Popular Posts */

.content .main-content .post .read-more {
  position: absolute;
  bottom: 10px;
  right: 10px;
  border: 1px solid #006668;
  background: transparent;
  border-radius: 0px;
  color: #005255 !important;
}

.content .main-content .post .read-more:hover {
  background: #0d474d;
  color: white !important;
  transition: 0.26s;
}

.content .main-content .post .post-image {
  width: 40%;
  height: 100%;
  float: left;
}

.content .main-content .post .post-preview {
  padding: 10px;
  width: 60%;

  float: right;
}

.content .sidebar {
  width: 30%;
  float: left;
}

.content .sidebar.single {
  padding: 0px 10px;
}

.content .main-content .recent-post {
  margin: 20px;
}

.content .sidebar .section {
  background: white;
  padding: 20px;
  border-radius: 10px;
  margin-bottom: 20px;
}

.content .sidebar .section.popular {
  border: 2px solid blu;
}

.content .sidebar .section-title {
  margin: 10px 0px 10px 0px;
}

.content .sidebar .section.search {
  margin-top: 80px;
}

.content .sidebar .section.topics ul {
  margin: 0px;
  padding: 0px;
  list-style: none;
  border-bottom: 1px solid #0d474d;
}

.content .sidebar .section.topics ul li a {
  display: block;
  border-bottom: 1px solid #0d474d;
  padding: 15px 0px 15px 0px;
  transition: all 0.3s;
}

.content .sidebar .section.topics ul li a:hover {
  padding-left: 15px;
  transition: all 0.3s;
}

/* Auth Pages */

.auth-content {
  width: 30%;
  margin: 50px auto;
  padding: 20px;
  background: white;
  border-radius: 5px;
}

.auth-content form div {
  margin-bottom: 10px;
}

.auth-content form p {
  text-align: center;
}

.auth-content form p a {
  text-decoration: underline;
}

.form-title {
  text-align: center;
}
/* //Auth Pages */

/* Footer */

.footer {
  background: #303036;
  color: #d3d3d3;
  height: 450px;
  position: relative;
}

.footer .footer-content {
  height: 350px;
  display: flex;
}

.footer .footer-content .footer-section {
  flex: 1;
  padding: 25px;
}

.footer .footer-bottom {
  background: #343a40;
  color: #686868;
  text-align: center;
  position: absolute;
  bottom: 0px;
  left: 0px;
  padding-top: 10px;
  height: 50px;
  width: 100%;
}

.footer .footer-content h1,
.footer .footer-content h2 {
  color: white;
}

.footer .footer-content .about h1 span {
  color: #05f7ff;
}

.footer .footer-content .about .contact span {
  display: block;
  font-size: 1.1rem;
  margin-bottom: 8px;
}

.footer .footer-content .about .socials a {
  border: 1px solid gray;
  width: 45px;
  height: 41px;
  padding-top: 5px;
  margin-right: 5px;
  text-align: center;
  display: inline-block;
  font-size: 1.3rem;
  border-radius: 5px;
  transition: all 0.3s;
}

.footer .footer-content .about .socials a:hover {
  border: 1px solid white;
  color: white;
  transition: all 0.3s;
}

.footer .footer-content .links ul a {
  display: block;
  margin-bottom: 10px;
  font-size: 1.2rem;
  transition: all 0.5s;
}

.footer .footer-content .links ul a:hover {
  color: white;
  margin-left: 15px;
  transition: all 0.5s;
}

.footer .footer-content .contact-form .contact-input {
  background: #3e4b47;
  color: #bebdbd;
  margin-bottom: 10px;
  line-height: 1.5rem;
  padding: 0.9rem 1.5rem;
  border: none;
}

.footer .footer-content .contact-form .contact-input:focus {
  background: #1a1a1a;
}

.footer .footer-content .contact-form .contact-btn {
  float: right;
  font-size: 1.2rem;
  font-family: 'lora', 'serif';
}
/* ... */

